k8s/dev/flask-admin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-admin-vs
  namespace: ms-dev
spec:
  hosts:
  - flask-admin
  http:
  - route:
    - destination:
        host: flask-admin
