k8s/dev/flask-tutorial-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-tutorial-gateway
  namespace: ms-dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dev-flask.kkkk.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-tutorial-vs
  namespace: ms-dev
spec:
  hosts:
  - "dev-flask.kkkk.com"
  gateways:
  - flask-tutorial-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination: 
        host: flask-tutorial
        port:
          number: 8081
